--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 // Cores Principais
-$poseidon-blue: #111184;
-$poseidon-yellow: #ffae00;
-$poseidon-white: #ffffff;
+$poseidon-blue: #011126;
+$poseidon-yellow: #f2af5c;
+$poseidon-white: #edf7f8;
 
 // Cores de Apoio
 $gray-300: #d1d5db;
