--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
+
+@import "../components/ui/button";
+
+@import "header";
 @import "hero";
+@import "about";
