--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -1,7 +1,11 @@
 @import "variables";
 
 .services {
-  background: #012340;
+  position: relative;
+  background: url("../assets/bgServices.png") no-repeat center center; // Ajuste o caminho da imagem
+  background-size: cover;
+  background-attachment: fixed; // Cria um efeito de profundidade (opcional)
+  padding: 100px 0;
 
   .service-card {
     position: relative;
@@ -12,6 +16,7 @@
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
+    background-color: #012340;
 
     &:hover {
       transform: translateY(-10px);
