--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -29,8 +29,7 @@
     transition: $transition;
 
     &:hover {
-      border: 0.2px solid #fafafa;
-      background-color: #03658c;
+      border-color: $poseidon-yellow;
       transform: translateY(-5px);
 
       .about__icon {
