--- a/src/styles/_testimonials.scss
+++ b/src/styles/_testimonials.scss
@@ -5,6 +5,10 @@
   padding: 0px 0;
   position: relative;
 
+  &__text {
+    color: rgba($poseidon-white, 0.7);
+  }
+
   h2 {
     color: #ffffff;
     font-weight: 700;
