--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -2,10 +2,23 @@
 
 .services {
   position: relative;
-  background: url("../assets/bgServices.png") no-repeat center center;
-  background-size: cover;
-  background-attachment: fixed;
   padding: 100px 0;
+  overflow: hidden; // Garante que o vídeo não "vaze" as bordas arredondadas
+
+  &__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; // Faz o vídeo se comportar como background-size: cover
+    z-index: 0;
+  }
+
+  &__content {
+    position: relative; // ESSENCIAL
+    z-index: 2;
+  }
 
   &__badge {
     color: $poseidon-yellow;
